--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
@@ -25,7 +25,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th class="sub-line"><span>Flexão</span></th>
+                                <th class="sub-line"><span (click)="openDialog('Punho - Flexão')">Flexão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -71,7 +71,7 @@
                                 <td *ngIf="addEval">&nbsp;</td>
                             </tr>
                             <tr>
-                                <th class="sub-line"><span>Extensão</span></th>
+                                <th class="sub-line"><span (click)="openDialog('Punho - Extensão')">Extensão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -159,7 +159,7 @@
                         </thead>
                         <tbody>
                             <tr class="sub-line">
-                                <th><span>Flexão</span></th>
+                                <th><span (click)="openDialog('Cotovelo - Flexão')">Flexão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -203,7 +203,7 @@
                             </tr>
 
                             <tr class="sub-line">
-                                <th><span>Extensão</span></th>
+                                <th><span (click)="openDialog('Cotovelo - Extensão')">Extensão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -290,7 +290,7 @@
                         </thead>
                         <tbody>
                             <tr class="sub-line">
-                                <th><span>Abdução</span></th>
+                                <th><span (click)="openDialog('Ombro - Abdução')">Abdução</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -334,7 +334,7 @@
                             </tr>
 
                             <tr class="sub-line">
-                                <th><span>Extensão</span></th>
+                                <th><span (click)="openDialog('Ombro - Extensão')">Extensão</span></th>
                             </tr>
                             <tr>
                                 <th>Horizontal</th>
@@ -397,7 +397,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th>Flexão</th>
+                                <th><span (click)="openDialog('Tronco - Flexão')">Flexão</span></th>
                                 <td *ngIf="pointer>=1">{{evaluation[pointer-1].troncof}}</td>
                                 <td *ngIf="pointer>=0">{{evaluation[pointer].troncof}}</td>
                                 <td *ngIf="addEval">
@@ -413,7 +413,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>Extensão</th>
+                                <th><span (click)="openDialog('Tronco - Extensão')">Extensão</span></th>
                                 <td *ngIf="pointer>=1">{{evaluation[pointer-1].troncoe}}</td>
                                 <td *ngIf="pointer>=0">{{evaluation[pointer].troncoe}}</td>
                                 <td *ngIf="addEval">
@@ -430,7 +430,7 @@
                             </tr>
 
                             <tr class="sub-line">
-                                <th><span>Flexão Lateral</span></th>
+                                <th><span (click)="openDialog('Tronco - Flexão Lateral')">Flexão Lateral</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -517,7 +517,7 @@
                         </thead>
                         <tbody>
                             <tr class="sub-line">
-                                <th><span>Flexão</span></th>
+                                <th><span (click)="openDialog('Quadril - Flexão')">Flexão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -561,7 +561,7 @@
                             </tr>
 
                             <tr class="sub-line">
-                                <th><span>Extensão</span></th>
+                                <th><span (click)="openDialog('Quadril - Extensão')">Extensão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -604,7 +604,7 @@
                                 <td *ngIf="addEval">&nbsp;</td>
                             </tr>
                             <tr class="sub-line">
-                                <th><span>Abdução</span></th>
+                                <th><span (click)="openDialog('Quadril - Abdução')">Abdução</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -648,7 +648,7 @@
                             </tr>
 
                             <tr class="sub-line">
-                                <th><span>Adução</span></th>
+                                <th><span (click)="openDialog('Quadril - Adução')">Adução</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -735,7 +735,7 @@
                         </thead>
                         <tbody>
                             <tr class="sub-line">
-                                <th><span>Flexão</span></th>
+                                <th><span (click)="openDialog('Joelho - Flexão')">Flexão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -779,7 +779,7 @@
                             </tr>
 
                             <tr class="sub-line">
-                                <th><span>Extensão</span></th>
+                                <th><span (click)="openDialog('Punho - Extensão')">Extensão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -866,7 +866,7 @@
                         </thead>
                         <tbody>
                             <tr class="sub-line">
-                                <th><span>Flexão</span></th>
+                                <th><span (click)="openDialog('Pés - Flexão')">Flexão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -909,7 +909,7 @@
                             </tr>
 
                             <tr class="sub-line">
-                                <th><span>Extensão</span></th>
+                                <th><span (click)="openDialog('Pés - Extensão')">Extensão</span></th>
                             </tr>
                             <tr>
                                 <th>Direito</th>
@@ -990,7 +990,7 @@
                     </thead>
                     <tbody>
                         <tr class="sub-line">
-                            <th><span>Membros Superiores</span></th>
+                            <th><span (click)="openDialog('Membros Superiores')">Membros Superiores</span></th>
                         </tr>
                         <tr>
                             <th>Direito</th>
@@ -1013,7 +1013,7 @@
                         </tr>
 
                         <tr class="sub-line">
-                            <th><span>Membros Inferiores</span></th>
+                            <th><span (click)="openDialog('Membros Inferiores')">Membros Inferiores</span></th>
                         </tr>
                         <tr>
                             <th>Direito</th>
