--- a/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
+++ b/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
@@ -23,7 +23,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n>Carga teste</th>
+                        <th i18n><span (click)="openDialog('Carga Teste')">Carga Teste</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].carga | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].carga | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -88,37 +88,37 @@
                     </tr>
                     <!--  resultados -->
                     <tr>
-                        <th i18n>FC Estimada</th>
+                        <th i18n><span (click)="openDialog('FC Estimada')">FC Estimada</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcestimada | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcestimada | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th i18n>FC Reserva</th>
+                        <th i18n><span (click)="openDialog('FC Reserva')">FC Reserva</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fcreserva | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th i18n>% FC Máx. Alcançada</th>
+                        <th i18n><span (click)="openDialog('% FC Máximo Alcançado')">% FC Máx. Alcançada</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_percfcm | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_percfcm | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th i18n>Indice Aeróbico Funcional (FAI)</th>
+                        <th i18n><span (click)="openDialog('Índice Aeróbico Funcional')">Índice Aeróbico Funcional (FAI)</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_fai | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_fai | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th i18n>VO2 Máx Obtido</th>
+                        <th i18n><span (click)="openDialog('VO2 Máximo Obtido')">VO2 Máx Obtido</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2m | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2m | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
                     <tr>
-                        <th i18n>VO2 Máx. Estimado</th>
+                        <th i18n><span (click)="openDialog('VO2 Máximo Estimado')">VO2 Máx. Estimado</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].c_vo2e | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
