--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -276,26 +276,31 @@
           <!-- Doença -->
           <mat-card>
             <mat-card-content>
-              <mat-radio-group aria-label="Select an option" #Q2B="ngModel" name="Q2B" [(ngModel)]="student.Q2B">
+              <mat-radio-group aria-label="Select an option" #Q2B="ngModel" name="Q2B" [(ngModel)]="student.Q2B" (change)="clearDoencasInfo(Q2B.value)">
                 <mat-label i18n="Label">Doença</mat-label>
                 <mat-radio-button value="1" i18n="Label">Sim</mat-radio-button>
                 <mat-radio-button value="0" i18n="Label">Não</mat-radio-button>
               </mat-radio-group>
-              <mat-form-field class="input-lg" *ngIf="Q2B.value==1">
-                <mat-label i18n="Label">Doenças</mat-label>
-                <mat-select i18n placeholder="selecione" multiple #doencas="ngModel" name="doencas"
-                  [(ngModel)]="doencasList.doencas">
-                  <mat-option value="Artrite reumatóide">Artrite reumatóide</mat-option>
-                  <mat-option value="Bronquite asmática">Bronquite asmática</mat-option>
-                  <mat-option value="Câncer">Câncer</mat-option>
-                  <mat-option value="Diabetes tipo I">Diabetes tipo I</mat-option>
-                  <mat-option value="Diabetes tipo II">Diabetes tipo II</mat-option>
-                  <mat-option value="Doenças cardíacas">Doenças cardíacas</mat-option>
-                  <mat-option value="Hipertensão">Hipertensão</mat-option>
-                  <mat-option value="Osteopenia">Osteopenia</mat-option>
-                  <mat-option value="Osteoporose">Osteoporose</mat-option>
-                </mat-select>
-              </mat-form-field>
+                <div class="check-box" [hidden]="Q2B.value!=1">
+                  <mat-checkbox i18n="Label" #artrite="ngModel" name="artrite" [(ngModel)]="student.artrite">Artrite Reumatóide</mat-checkbox>
+                  <mat-checkbox i18n="Label" #bronquite="ngModel" name="bronquite" [(ngModel)]="student.bronquite">Bronquite Asmática</mat-checkbox>
+                  <mat-checkbox i18n="Label" #cancer="ngModel" name="cancer" [(ngModel)]="student.cancer">Câncer</mat-checkbox>
+                  <mat-form-field class="input-lg" *ngIf="cancer.value==1">
+                    <mat-label i18n="Label">Onde?</mat-label>
+                    <input matInput placeholder="" #canceronde="ngModel" name="canceronde" [(ngModel)]="student.canceronde">
+                  </mat-form-field>                  
+                  <mat-checkbox i18n="Label" #diabetes1="ngModel" name="diabetes1" [(ngModel)]="student.diabetes1">Diabetes Tipo I</mat-checkbox>
+                  <mat-checkbox i18n="Label" #diabetes2="ngModel" name="diabetes2" [(ngModel)]="student.diabetes2">Diabetes Tipo II</mat-checkbox>
+                  <mat-checkbox i18n="Label" #cardiacas="ngModel" name="cardiacas" [(ngModel)]="student.cardiacas">Doenças Cardíacas</mat-checkbox>
+                  <mat-form-field class="input-lg" *ngIf="cardiacas.value==1">
+                    <mat-label i18n="Label">Qual(is)?</mat-label>
+                    <input matInput placeholder="" #cardiacasquais="ngModel" name="cardiacasquais" [(ngModel)]="student.cardiacasquais">
+                  </mat-form-field>    
+                  <mat-checkbox i18n="Label" #hipertenso="ngModel" name="hipertenso" [(ngModel)]="student.hipertenso">Hipertensão</mat-checkbox>
+                  <mat-checkbox i18n="Label" #osteopenia="ngModel" name="osteopenia" [(ngModel)]="student.osteopenia">Osteopenia</mat-checkbox>
+                  <mat-checkbox i18n="Label" #osteoporose="ngModel" name="osteoporose" [(ngModel)]="student.osteoporose">Osteoporose</mat-checkbox>
+                </div>
+
               <mat-form-field class="input-lg" *ngIf="Q2B.value==1">
                 <mat-label i18n="Label">Outras</mat-label>
                 <input matInput placeholder="Qual(is)" #Q2BQ="ngModel" name="Q2BQ" [(ngModel)]="student.Q2BQ">
@@ -557,7 +562,7 @@
           <mat-card>
             <mat-card-content>
               <mat-label i18n><strong>Álcool</strong></mat-label>
-              <mat-radio-group aria-label="Select an option" #Q4BB="ngModel" name="Q4BB" [(ngModel)]="student.Q4BB">
+              <mat-radio-group aria-label="Select an option" #Q4BB="ngModel" name="Q4BB" [(ngModel)]="student.Q4BB" (change)="clearBebidaInfo()">
                 <mat-radio-button value="1" i18n>Consome</mat-radio-button>
                 <mat-radio-button value="0" i18n>Não consome</mat-radio-button>
               </mat-radio-group>
@@ -595,7 +600,7 @@
               <mat-label i18n><strong>Alimentação</strong></mat-label>
               <br />
               <mat-label i18n>Está em dieta?</mat-label>
-              <mat-radio-group aria-label="Select an option" #Q4E="ngModel" name="Q4E" [(ngModel)]="student.Q4E">
+              <mat-radio-group aria-label="Select an option" #Q4E="ngModel" name="Q4E" [(ngModel)]="student.Q4E" (change)="clearAlimentacaoInfo()">
                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                 <mat-radio-button value="2" i18n>não</mat-radio-button>
               </mat-radio-group>
@@ -696,7 +701,7 @@
             <mat-card-content>
               <mat-label i18n><strong>Tabagismo</strong></mat-label>
               <mat-radio-group aria-label="Select an option" #fumante="ngModel" name="fumante"
-                [(ngModel)]="student.fumante">
+                [(ngModel)]="student.fumante" (change)="clearFumanteInfo()">
                 <mat-radio-button value="N" i18n>Não Fumante</mat-radio-button>
                 <mat-radio-button value="S" i18n>Fumante</mat-radio-button>
                 <mat-radio-button value="E" i18n>Eventual</mat-radio-button>
@@ -759,25 +764,16 @@
                 <mat-checkbox i18n="Label" #Q56="ngModel" name="Q56" [(ngModel)]="student.Q56">Alergias</mat-checkbox>
                 <mat-checkbox i18n="Label" #Q58="ngModel" name="Q58" [(ngModel)]="student.Q58">Arritmias</mat-checkbox>
                 <mat-checkbox i18n="Label" #Q53="ngModel" name="Q53" [(ngModel)]="student.Q53">Desmaios</mat-checkbox>
-                <mat-checkbox i18n="Label" #Q51="ngModel" name="Q51" [(ngModel)]="student.Q51">Dor de cabeça
-                </mat-checkbox>
-                <mat-checkbox i18n="Label" #Q54="ngModel" name="Q54" [(ngModel)]="student.Q54">Dor no peito
-                </mat-checkbox>
-
-                <mat-checkbox i18n="Label" #Q510="ngModel" name="Q510" [(ngModel)]="student.Q510">Dores nas costas
-                </mat-checkbox>
+                <mat-checkbox i18n="Label" #Q51="ngModel" name="Q51" [(ngModel)]="student.Q51">Dor de cabeça</mat-checkbox>
+                <mat-checkbox i18n="Label" #Q54="ngModel" name="Q54" [(ngModel)]="student.Q54">Dor no peito</mat-checkbox>
+                <mat-checkbox i18n="Label" #Q510="ngModel" name="Q510" [(ngModel)]="student.Q510">Dores nas costas</mat-checkbox>
                 <div *ngIf="Q510.value" style="margin-left: 25px;">
-                  <mat-checkbox i18n="Label" #Q510TC="ngModel" name="Q510TC" [(ngModel)]="student.Q510TC">Cervical
-                  </mat-checkbox>
-                  <mat-checkbox i18n="Label" #Q510TD="ngModel" name="Q510TD" [(ngModel)]="student.Q510TD">Dorsal
-                  </mat-checkbox>
-                  <mat-checkbox i18n="Label" #Q510TL="ngModel" name="Q510TL" [(ngModel)]="student.Q510TL">Lombar
-                  </mat-checkbox>
+                  <mat-checkbox i18n="Label" #Q510TC="ngModel" name="Q510TC" [(ngModel)]="student.Q510TC">Cervical</mat-checkbox>
+                  <mat-checkbox i18n="Label" #Q510TD="ngModel" name="Q510TD" [(ngModel)]="student.Q510TD">Dorsal</mat-checkbox>
+                  <mat-checkbox i18n="Label" #Q510TL="ngModel" name="Q510TL" [(ngModel)]="student.Q510TL">Lombar</mat-checkbox>
                 </div>
-                <mat-checkbox i18n="Label" #Q57="ngModel" name="Q57" [(ngModel)]="student.Q57">Dores nas pernas
-                </mat-checkbox>
-                <mat-checkbox i18n="Label" #Q55="ngModel" name="Q55" [(ngModel)]="student.Q55">Excesso de peso
-                </mat-checkbox>
+                <mat-checkbox i18n="Label" #Q57="ngModel" name="Q57" [(ngModel)]="student.Q57">Dores nas pernas</mat-checkbox>
+                <mat-checkbox i18n="Label" #Q55="ngModel" name="Q55" [(ngModel)]="student.Q55">Excesso de peso</mat-checkbox>
                 <mat-checkbox *ngIf="student.sexo == 'F'" i18n="Label" #Q59="ngModel" name="Q59"
                   [(ngModel)]="student.Q59">Tensão pré-menstrual
                 </mat-checkbox>
